--- a/template-Egens-Landing-Page-main/index.html
+++ b/template-Egens-Landing-Page-main/index.html
@@ -11,9 +11,12 @@
 <body>
     
 
-<!-- navbar start -->
 
 <div class="container-fluid">
+
+
+<!-- navbar start -->
+
 <nav class="navbar navbar-expand-lg bg-body-tertiary my-4 ms-5">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">Navbar</a>
@@ -55,6 +58,21 @@
 
 <!-- end navbar -->
 
+<div class="container">  
+<div class="row py-5">
+  <div class="col-lg-6 col-md-6 col-sm-6"> 
+     <h4 class="banner-subtitle">WE ARE AGENS</h4>
+     <h1 class="banner-tiitle">We Design Solutions For Busines</h1>
+     <p class="banner-text">Lorem ipsum dolor sit amet quaerat molestiae cumque natus exercitationemdit magni expedita minus nihil!</p>
+     <a class="banner-btn d-inline-block" href="">Read More</a>
+  </div>
+  <div class="col-lg-1 col-md-6 col-sm-6">
+    </div>
+  <div class="col-lg-5 col-md-6 col-sm-6">
+   <img src="img/img-three.png" class="img-fluid" alt="">
+  </div>
+</div>
+</div>
   </div>
 </body>
 </html>
